# gmr-gpu

./: LICENSE  README.md  RELEASING.md  pyproject.toml
benchmarks/: bench_7d.py  dataset_bench.py
docs/journey/: README.md  certify_batched_kin.py  clip_parity.py  dls_step.py  fk_parity.py  gn_loop.py  jacobian.py  se3_error.py  two_stage.py
gmr_gpu/: __init__.py  config.py  kinematics.py  retarget.py  solver.py  targets.py
tests/: conftest.py  test_kinematics.py  test_solver.py
